--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginBottom="20dp"
+            android:layout_marginLeft="20dp"
             android:background="@drawable/head" />
 
         <ListView
@@ -46,8 +47,8 @@
 
             <ImageView
                 android:id="@+id/front_head"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="5dp"
